// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectInput handles boolean display 1`] = `
<DocumentFragment>
  <div
    class="css-1e7yhge"
  >
    <label
      class="css-xlyr96"
      for="Expected name"
    >
      Expected label
    </label>
    <i
      class="fa fa-asterisk css-1gx6zd3"
    />
    <div
      class="css-1y7plm6"
    >
      true
      <div
        class="css-ul54qr"
      >
        <i
          class="fa fa-caret-up"
        />
        <i
          class="fa fa-caret-down"
        />
      </div>
    </div>
    <select
      class="css-1m2rag2"
      disabled=""
      name="Expected name"
    >
      <option
        class="css-1xu3tth"
        disabled=""
        hidden=""
        value=""
      />
      <option
        class="css-1xu3tth"
        value="true"
      >
        true-label
      </option>
      <option
        class="css-1xu3tth"
        value="false"
      >
        false-label
      </option>
    </select>
  </div>
  <div
    class="css-vzng66"
  >
    <div
      class="css-1k9o271"
    >
      <label
        class="css-1y4orcj"
        for="Expected name"
      >
        Other Expected label
      </label>
      <input
        class="css-1v4xkzy"
        disabled=""
        name="Expected name"
        value="true"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectInput handles display as disabled 1`] = `
<DocumentFragment>
  <div
    class="css-1e7yhge"
  >
    <label
      class="css-xlyr96"
      for="Expected name"
    >
      Expected label
    </label>
    <i
      class="fa fa-asterisk css-1gx6zd3"
    />
    <div
      class="css-1y7plm6"
    >
      hi
      <div
        class="css-ul54qr"
      >
        <i
          class="fa fa-caret-up"
        />
        <i
          class="fa fa-caret-down"
        />
      </div>
    </div>
    <select
      class="css-1m2rag2"
      disabled=""
      name="Expected name"
    >
      <option
        class="css-1xu3tth"
        disabled=""
        hidden=""
        value=""
      />
      <option
        class="css-1xu3tth"
        value="hi"
      >
        hi
      </option>
      <option
        class="css-1xu3tth"
        value="bye"
      >
        bye
      </option>
    </select>
  </div>
  <div
    class="css-vzng66"
  >
    <div
      class="css-1k9o271"
    >
      <label
        class="css-1y4orcj"
        for="Expected name"
      >
        Other Expected label
      </label>
      <input
        class="css-1v4xkzy"
        disabled=""
        name="Expected name"
        value="hi"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectInput handles display as not disabled 1`] = `
<DocumentFragment>
  <div
    class="css-1e7yhge"
  >
    <label
      class="css-xlyr96"
      for="Expected name"
    >
      Expected label
    </label>
    <div
      class="css-1y7plm6"
    >
      hi
      <div
        class="css-ul54qr"
      >
        <i
          class="fa fa-caret-up"
        />
        <i
          class="fa fa-caret-down"
        />
      </div>
    </div>
    <select
      class="css-1m2rag2"
      name="Expected name"
    >
      <option
        class="css-1xu3tth"
        disabled=""
        hidden=""
        value=""
      />
      <option
        class="css-1xu3tth"
        value="hi"
      >
        hi
      </option>
      <option
        class="css-1xu3tth"
        value="bye"
      >
        bye
      </option>
    </select>
  </div>
  <div
    class="css-vzng66"
  >
    <div
      class="css-1k9o271"
    >
      <label
        class="css-1y4orcj"
        for="Expected name"
      >
        Other Expected label
      </label>
      <input
        class="css-1v4xkzy"
        name="Expected name"
        value="hi"
      />
    </div>
  </div>
</DocumentFragment>
`;
